Concurrent version using virtual threads and structured concurrency initial version